--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/server": "^9.27.2",
     "html5-qrcode": "^2.2.1",
     "next": "12.2.5",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
